--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.3",
     "express": "^5.1.0",
+    "prettier": "^3.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
