--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.3",
+    "@getbrevo/brevo": "^3.0.1",
     "express": "^5.1.0",
     "prettier": "^3.8.1",
     "rxjs": "~7.8.0",
